# couchbase-lite-rust

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  README.md  build.rs  download.sh  renovate.json  update_cblite_c.sh
.cargo-husky/hooks/: pre-commit
.github/workflows/: build.yml  clippy.yml  rust.yml  test.yml
c_playground/: .gitignore  CMakeLists.txt  README.md  doc.json  main.c  replication_issue.json
downloads/libcblite-3.2.0/include/cbl/: CBL_Edition.h
downloads/libcblite-3.2.0/lib/: cblite.lib
examples/: .gitignore  README.md  check_cbs_config.rs  sgw_1_cblite.rs  test_with_reporting.rs  ticket_70596.rs  tombstone_purge_test.rs  tombstone_purge_test_short.rs  tombstone_quick_check.rs  tombstone_resurrection_test.rs
examples/docker-conf/: db-config.json  docker-compose.yml  sync-function.js  syncgw-config.json  update.sh  wait-for-couchbase-server.sh
examples/docker-conf/couchbase-server-dev/: Dockerfile  configure-server.sh
examples/utils/: cbs_admin.rs  constants.rs  docker_manager.rs  git_checker.rs  mod.rs  sgw_admin.rs  test_reporter.rs
libcblite-3.0.3/include/cbl/: CBL_Edition.h
libcblite-3.0.3/lib/ios/CouchbaseLite.xcframework/ios-arm64/CouchbaseLite.framework/: CouchbaseLite  Info.plist
libcblite-3.0.3/lib/ios/CouchbaseLite.xcframework/ios-arm64/CouchbaseLite.framework/Headers/: CBLBase.h  CBLCollection.h  CBLDatabase.h  CBLDocument.h  CBLLog.h  CBLQuery.h  CBLReplicator.h  CBLScope.h  CBL_Edition.h  CouchbaseLite.h  FLBase.h  FLCollections.h  FLDoc.h  FLEncoder.h  FLExpert.h  FLJSON.h  FLSlice.h  Fleece+CoreFoundation.h
libcblite-3.0.3/lib/ios/CouchbaseLite.xcframework/ios-arm64_x86_64-simulator/CouchbaseLite.framework/: Info.plist
libcblite-3.0.3/lib/x86_64-unknown-linux-gnu/: libcblite.so.3
libcblite/include/cbl/: CBL_Edition.h
libcblite/lib/ios/CouchbaseLite.xcframework/ios-arm64/CouchbaseLite.framework/: CouchbaseLite
libcblite/lib/ios/CouchbaseLite.xcframework/ios-arm64/CouchbaseLite.framework/Headers/: CBLDefaults.h  (+5 more)
libcblite/lib/ios/CouchbaseLite.xcframework/ios-arm64_x86_64-simulator/CouchbaseLite.framework/: Info.plist
libcblite_community/include/cbl/: CBL_Edition.h
libcblite_community/lib/ios/CouchbaseLite.xcframework/: Info.plist
libcblite_community/lib/ios/CouchbaseLite.xcframework/ios-arm64/CouchbaseLite.framework/: CouchbaseLite  Info.plist
libcblite_community/lib/ios/CouchbaseLite.xcframework/ios-arm64_x86_64-simulator/CouchbaseLite.framework/: Info.plist
libcblite_community/lib/x86_64-pc-windows-gnu/: cblite.lib
libcblite_enterprise/include/cbl/: CBL_Edition.h
libcblite_enterprise/lib/ios/CouchbaseLite.xcframework/: Info.plist
libcblite_enterprise/lib/ios/CouchbaseLite.xcframework/ios-arm64/CouchbaseLite.framework/: CouchbaseLite  Info.plist
libcblite_enterprise/lib/ios/CouchbaseLite.xcframework/ios-arm64_x86_64-simulator/CouchbaseLite.framework/: Info.plist
libcblite_enterprise/lib/x86_64-pc-windows-gnu/: cblite.lib
src/: blob.rs  collection.rs  database.rs  document.rs  encryptable.rs  error.rs  fleece.rs  fleece_mutable.rs  index.rs  lib.rs  logging.rs  main.rs  query.rs  replicator.rs  scope.rs  slice.rs  wrapper.h
tests/: collection_tests.rs  database_tests.rs  document_tests.rs  fleece_tests.rs  lib_test.rs  query_tests.rs  replicator_tests.rs  utils.rs
(+75 files in other folders)
