[package]
name = "couchbase_lite"
# The first three numbers correspond to the Couchbase Lite C release, the fourth number corresponds to the Doctolib release
version = "3.2.1-0"
edition = "2021"

[dependencies]
enum_primitive = "*"
tempdir = "*"
lazy_static = "1.4.0"
regex = "1.10.4"

[dev-dependencies]
serde_json = "1"

[dev-dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["blocking", "json"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]

[build-dependencies]
bindgen = "0.69.4"
fs_extra = "1.2.0"

[lib]
bench = false
doctest = false
crate-type = ["lib", "dylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
# See: https://github.com/johnthagen/min-sized-rust

[features]
community = []
enterprise = []

unsafe-threads-test = []
