[package]
name = "couchbase_lite"
description = "Rust bindings for Couchbase Lite C"
# The first three numbers correspond to the Couchbase Lite C release, the fourth number corresponds to the Rust release
version = "3.2.2-0"

edition = "2024"

license-file = "libcblite_enterprise/LICENSE.txt"
keywords = ["couchbase"]
categories = ["database"]

[dependencies]
bitflags = "2.9.0"
enum_primitive = "0.1.1"

[dev-dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
tempdir = "0.3.7"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]

[build-dependencies]
bindgen = "0.71.1"
fs_extra = "1.2.0"

[lib]
bench = false
doctest = false
crate-type = ["lib", "dylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
# See: https://github.com/johnthagen/min-sized-rust

[features]
community = []
enterprise = []

unsafe-threads-test = []
